--- a/_posts/2017-11-12-SCSS.markdown
+++ b/_posts/2017-11-12-SCSS.markdown
@@ -2,6 +2,6 @@
 layout: post
 title:  "My thoughts about static site generators"
 date:   2017-11-12 14:58:44 +0100
-categories: jekyll update
+categories: blogpost
 ---
 Hejsan Där
